[package]
name = "rust_rl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autograd = { version = "2.0.0-rc3", features = ["blas", "accelerate"] }
ndarray = { version = "0.14.0", features = ["serde", "approx"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libmath = "0.2.1"
rand = "0.8.5"
anyhow = "1"
rulinalg = "0.3.0"
base64 = "0.21.0"
statistical = "1.0.0"
substring = "1.4.5"
